@@ -17,9 +17,11 @@ Global
 	GlobalSection(SolutionConfiguration) = preSolution
 		Debug = Debug
 		Debug No Memory Tracking Xbox = Debug No Memory Tracking Xbox
+		Debug Xbox No Memory Tracking = Debug Xbox No Memory Tracking
 		Profile = Profile
 		Profile_FastCap = Profile_FastCap
 		Release = Release
+		Release Xbox  Debugging = Release Xbox  Debugging
 		Release_LTCG = Release_LTCG
 	EndGlobalSection
 	GlobalSection(ProjectConfiguration) = postSolution
@@ -27,36 +29,43 @@ Global
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Debug.Build.0 = Debug|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Debug No Memory Tracking Xbox.ActiveCfg = Debug|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Debug No Memory Tracking Xbox.Build.0 = Debug|Xbox
+		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Debug Xbox No Memory Tracking.ActiveCfg = Debug|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Profile.ActiveCfg = Profile|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Profile.Build.0 = Profile|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Profile_FastCap.ActiveCfg = Profile_FastCap|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Profile_FastCap.Build.0 = Profile_FastCap|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Release.ActiveCfg = Release|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Release.Build.0 = Release|Xbox
+		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Release Xbox  Debugging.ActiveCfg = Release|Xbox
+		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Release Xbox  Debugging.Build.0 = Release|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Release_LTCG.ActiveCfg = Release_LTCG|Xbox
 		{9B28366B-79F0-4361-B5C5-4608DFA8CF17}.Release_LTCG.Build.0 = Release_LTCG|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Debug.ActiveCfg = Debug|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Debug.Build.0 = Debug|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Debug No Memory Tracking Xbox.ActiveCfg = Debug Xbox No Memory Tracking|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Debug No Memory Tracking Xbox.Build.0 = Debug Xbox No Memory Tracking|Xbox
+		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Debug Xbox No Memory Tracking.ActiveCfg = Debug Xbox No Memory Tracking|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Profile.ActiveCfg = Profile|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Profile.Build.0 = Profile|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Profile_FastCap.ActiveCfg = Profile_FastCap|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Profile_FastCap.Build.0 = Profile_FastCap|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Release.ActiveCfg = Release|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Release.Build.0 = Release|Xbox
+		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Release Xbox  Debugging.ActiveCfg = Release|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Release_LTCG.ActiveCfg = Release_LTCG|Xbox
 		{31103E92-4EE8-4F94-B67A-092C7CEFDB3D}.Release_LTCG.Build.0 = Release_LTCG|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Debug.ActiveCfg = Debug|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Debug.Build.0 = Debug|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Debug No Memory Tracking Xbox.ActiveCfg = Debug|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Debug No Memory Tracking Xbox.Build.0 = Debug|Xbox
+		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Debug Xbox No Memory Tracking.ActiveCfg = Debug|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Profile.ActiveCfg = Profile|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Profile.Build.0 = Profile|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Profile_FastCap.ActiveCfg = Profile_FastCap|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Profile_FastCap.Build.0 = Profile_FastCap|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Release.ActiveCfg = Release|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Release.Build.0 = Release|Xbox
+		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Release Xbox  Debugging.ActiveCfg = Release|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Release_LTCG.ActiveCfg = Release|Xbox
 		{D33D36E6-6E4B-4C1B-A820-A12C94CB1411}.Release_LTCG.Build.0 = Release|Xbox
 	EndGlobalSection
